# sequence_diagram

./: CMakeLists.txt  keyword_factory.h  main.cpp
include/: composer.h  drawing_board.h  keyword_factory.h
include/key_components/: arrow_line.h  block.h  note.h  title.h
include/tools/: candy.h
include/view_components/: rectangle.h  straight_line.h  straight_line_with_marker.h
src/: composer.cpp
src/key_components/: arrow_line.cpp  note.cpp  title.cpp
test/: test_drawing.cpp  test_syntax.cpp
